# portainer-updater

./: pyproject.toml  update_stack.py
