[tool.poetry]
name = "portainer-updater"
version = "0.1.0"
description = ""
authors = ["Ronald Moesbergen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
